--- a/public/less/profile/ProfileDropdown.less
+++ b/public/less/profile/ProfileDropdown.less
@@ -1,4 +1,5 @@
 .profile-btn{
+	float: left;
 	margin: 14px 10px;
 	border-radius: 50px;
 	width: 40px;
